# amplifier-bundle-observers

./: .gitignore  README.md  bundle.md  pyproject.toml
amplifier_bundle_observers/: models.py
amplifier_bundle_observers/hooks_observations/: __init__.py
context/: instructions.md  observer-protocol.md
examples/: full-stack-review.md  full-stack-review.yaml  multi-observer.md  multi-observer.yaml  simple-observer.md  simple-observer.yaml  systems-thinking.md  systems-thinking.yaml  tiered-review.md  tiered-review.yaml  writing-review.md  writing-review.yaml
modules/hooks-observations/: pyproject.toml
modules/hooks-observations/amplifier_module_hooks_observations/: __init__.py  loader.py  models.py
modules/tool-observations/: pyproject.toml
notebooks/: README.md  bundle-composition-debug.ipynb
observers/: boundary-analyzer.md  change-dynamics.md  code-quality.md  emergence-complexity.md  incentives-analyzer.md  leverage-points.md  mental-models.md  root-cause-analyzer.md  second-order-effects.md  security-auditor.md  stakeholder-analyzer.md  systems-dynamics.md
tests/: __init__.py  test_hooks_observations.py  test_models.py  test_tool_observations.py
tests/shadow/: README.md  buggy_code.py  shadow-test-bundle.md
